--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
 
     <!-- Impor script kamu di sini -->
     <!-- Lampirkan `defer` jika pemanggilan dilakukan dalam <head> -->
+    <link rel="icon" href="image.png" type="image/png" />
     <link rel="stylesheet" href="style.css" />
     <script defer src="main.js"></script>
   </head>
